Downgraded project to Java 17